# stormgate-build-solver

./: .gitignore  CMakeLists.txt  readme.md  run.bat  run.sh
src/: buildordergraph.h  common.h  database.cpp  database.h  errorcodes.h  faction.cpp  faction.h  faction_celestial.cpp  faction_infernal.cpp  faction_vanguard.cpp  gamegraph.h  gamestate.cpp  gamestate.h  graph.cpp  graph.h  model.cpp  model.h  solver.cpp  solver.h  solverstrategy.h  solverstrategy_celestial.cpp  solverstrategy_infernal.cpp  solverstrategy_vanguard.cpp
tests/: CMakeLists.txt  tests.cpp
tests/gtest/src/: gtest.cc
